/* 
  Localizable.strings
  FeedingTimer

  Created by alexander boswell on 4/29/21.
  
*/


"start-text" = "Start";
"cancel-text" = "Cancel";
"notification-title" = "Next baby feeding!";
"notification-subtitle" = "It's time to eat!";
"hour-abbreviation" = "hrs";
"minutes-abbreviation" = "mins";
"timer-headline" = "Next feeding in...";
"unset-complication-simple" = "SET";
"unset-complication-verbose" = "Set next feeding";
"set-complication-verbose" = "Next feeding at";
"app-title" = "Feeding Timer";
